tests/ui/consts/const-eval/ref_to_int_match.32bit.stderr
error[E0080]: evaluation of constant value failed
  --> $DIR/ref_to_int_match.rs:24:27
   |
LL | const BAR: Int = unsafe { Foo { r: &42 }.f };
   |                           ^^^^^^^^^^^^^^^^ unable to turn pointer into integer
   |
   = help: this code performed an operation that depends on the underlying bytes representing a pointer
   = help: the absolute address of a pointer is not known at compile-time, so such operations are not supported

error: could not evaluate constant pattern
  --> $DIR/ref_to_int_match.rs:7:14
   |
LL |         10..=BAR => {},
   |              ^^^

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0080`.
